// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all 1`] = `
[
  {
    "foo": "Lorem",
    "id": "/docs/guides/hello",
  },
  {
    "bar": "Ipsum",
    "id": "/docs/world",
  },
  {
    "bar": "Docs",
    "id": "/docs",
  },
  {
    "foo": "Dolor",
    "id": "/other/area/hello",
  },
  {
    "bar": "Sit",
    "id": "/other/world",
  },
  {
    "foo": "Amet",
    "id": "/",
  },
  {
    "bar": "Consectetur",
    "id": "/other",
  },
  {
    "group": {
      "id": "/group",
      "title": "Group Title",
    },
    "id": "/group",
  },
  {
    "group": {
      "id": "/group",
      "title": "Group Title",
    },
    "id": "/group/under-a-group",
  },
]
`;

exports[`under 1`] = `
[
  {
    "foo": "Lorem",
    "id": "/docs/guides/hello",
  },
  {
    "bar": "Ipsum",
    "id": "/docs/world",
  },
  {
    "bar": "Docs",
    "id": "/docs",
  },
]
`;
